# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import categoriesRouter from "./categories";
 import songsRouter from "./songs";
+import songVersionsRouter from "./song-versions";
 import setlistsRouter from "./setlists";
 
 const router: IRouter = Router();
@@ -9,6 +10,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(categoriesRouter);
 router.use(songsRouter);
+router.use(songVersionsRouter);
 router.use(setlistsRouter);
 
 export default router;
